--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Camisas Esportivas</title>
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="Style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -20,7 +20,7 @@
 
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 margin-left">
                     <li class="nav-item item-de-cima">
-                      <a class="nav-link active" aria-current="page" href="#" id="subtitulo-2">Produtos</a>
+                      <a class="nav-link active" aria-current="page" href="Pagina-produtos.html" id="subtitulo-2">Produtos</a>
                     </li>
                     <li class="nav-item item-de-baixo">
                         <a class="nav-link active" aria-current="page" href="#" id="subtitulo-2">Sobre nós</a>
@@ -101,7 +101,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Camisa esportiva azul de mangas verdes</p>
-                      <a href="#" class="btn btn-primary">Ver detalhes</a>
+                      <a href="Produto_fixo(1).html" class="btn btn-primary">Ver detalhes</a>
                     </div>
                   </div>
 
