--- a/Produto_fixo (1).html
+++ b/Produto_fixo (1).html
@@ -12,7 +12,7 @@
     <header>
         <div class="collapse" id="navbarToggleExternalContent" data-bs-theme="dark">
             <div class="bg-escuro p-4" id="div_header_1">
-              <img src="Imagens_respectivas_ao_site/Logo-empresa-sem-fundo.png" class="logo">  
+              <img src="Logo-empresa-sem-fundo.png" class="logo">  
               <h5 class="text-body-emphasis h4" id="subtitulo">Roar Clothes</h5>
               </div>
               <div class="bg-escuro margin-left">
@@ -59,13 +59,13 @@
     <main>
 
         <div class="card" style="width: 15rem;">
-            <img src="Imagens_respectivas_ao_site/camisa-1.jpg" class="card-img-top" alt="...">
+            <img src="camisa-1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">O Puma</h5>
               <p class="card-text">Camisa esportiva preta com amarelo, estampa de puma.  <b>Contate-nos no instagram</b> para fazer o pedido da sua camisa,
                 pode apertar o botão abaixo.
               </p>
-              <a href="#" class="btn btn-primary">Ver no <img src="Imagens_respectivas_ao_site/3d_circle_with_instagram_symbol_isolated_on_a_transparent_background-removebg-preview.png" alt="" class="icone"></a>
+              <a href="#" class="btn btn-primary">Ver no <img src="3d_circle_with_instagram_symbol_isolated_on_a_transparent_background-removebg-preview.png" alt="" class="icone"></a>
             </div>
           </div>
 
