--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
             <div>
 
-                <a href="#" class="veja-mais">Veja  mais</a>
+                <a href="Pagina-produtos.html" class="veja-mais">Veja  mais</a>
 
             </div>
 
