--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Camisa esportiva azul de mangas verdes</p>
-                      <a href="Produto_fixo(1).html" class="btn btn-primary">Ver detalhes</a>
+                      <a href="Produto_fixo.html" class="btn btn-primary">Ver detalhes</a>
                     </div>
                   </div>
 
@@ -111,7 +111,7 @@
                         <div class="card-body">
                           <h5 class="card-title">Card title</h5>
                           <p class="card-text">Camisa esportiva com degrade de azul escuro para branco</p>
-                          <a href="#" class="btn btn-primary">Ver detalhes</a>
+                          <a href="Produto_fixo.html" class="btn btn-primary">Ver detalhes</a>
                         </div>
                       </div>
 
@@ -121,7 +121,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
                               <p class="card-text">Camisa esportiva inspirada em puma, dourado com preto</p>
-                              <a href="#" class="btn btn-primary">Ver detalhes</a>
+                              <a href="Produto_fixo.html" class="btn btn-primary">Ver detalhes</a>
                             </div>
                           </div>
 
@@ -131,7 +131,7 @@
                                 <div class="card-body">
                                   <h5 class="card-title">Card title</h5>
                                   <p class="card-text">Nossa edição especial de camisa dourada com temática de puma</p>
-                                  <a href="#" class="btn btn-primary">Ver detalhes</a>
+                                  <a href="Produto_fixo.html" class="btn btn-primary">Ver detalhes</a>
                                 </div>
                               </div>
 
@@ -141,7 +141,7 @@
                                     <div class="card-body">
                                       <h5 class="card-title">Card title</h5>
                                       <p class="card-text">Camisa branca com estampado de puma</p>
-                                      <a href="#" class="btn btn-primary">Ver detalhes</a>
+                                      <a href="Produto_fixo.html" class="btn btn-primary">Ver detalhes</a>
                                     </div>
                                   </div>
 
@@ -151,7 +151,7 @@
                                         <div class="card-body">
                                           <h5 class="card-title">Card title</h5>
                                           <p class="card-text">Camisa preta com roxo</p>
-                                          <a href="#" class="btn btn-primary">Ver detalhes</a>
+                                          <a href="Produto_fixo.html" class="btn btn-primary">Ver detalhes</a>
                                         </div>
                                       </div>
 
